Add srt as previewable file

--- a/wwwroot/files/index.html
+++ b/wwwroot/files/index.html
@@ -356,7 +356,7 @@
 
             var build = searchHash.substr(searchHash.indexOf('build=')).split('&')[0].split('=')[1];
 
-            var previewTypes = ["ogg", "mp3", "blp", "wmo", "m2", "xml", "lua", "txt"];
+            var previewTypes = ["ogg", "mp3", "blp", "wmo", "m2", "xml", "lua", "txt", "srt"];
 
             var table = $('#files').DataTable({
                 "processing": true,
