--- a/wwwroot/builds/diff.html
+++ b/wwwroot/builds/diff.html
@@ -105,7 +105,7 @@
             return this.charAt(0).toUpperCase() + this.slice(1)
         }
 
-        var previewTypes = ["ogg", "mp3", "blp", "wmo", "m2", "xml", "lua", "txt"];
+        var previewTypes = ["ogg", "mp3", "blp", "wmo", "m2", "xml", "lua", "txt", "srt"];
         
         $(document).ready(function () {
            // var encrypted = <?= json_encode($encrypted) ?>;
