Add hotfixes page

--- a/wwwroot/builds/index.html
+++ b/wwwroot/builds/index.html
@@ -67,6 +67,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/builds/"><i class="fa fa-hdd-o" aria-hidden="true"></i> Builds</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/dbc/hotfixes.html"><i class="fa fa-fire-extinguisher" aria-hidden="true"></i> Hotfixes</a>
+                </li>
             </ul>
         </div>
     </nav>
