Add "all" dropdown in files page (use at own risk)

--- a/wwwroot/files/index.html
+++ b/wwwroot/files/index.html
@@ -383,6 +383,10 @@
                 "displayStart": page * 25,
                 "autoWidth": false,
                 "pagingType": "input",
+                "lengthMenu": [
+                    [10, 25, 50, 100, 1000, -1],
+                    [10, 25, 50, 100, 1000, "All"]
+                ],
                 "orderMulti": false,
                 "order": [[sortCol, sortDesc]],
                 "columnDefs": [
