--- a/wwwroot/dbc/diff.html
+++ b/wwwroot/dbc/diff.html
@@ -87,11 +87,13 @@
             <select id="newbuild" name="new" class="form-control form-control-sm buildFilter">
             </select>
             <!--<div class="form-check" style="padding-left: 5px;">
-                <input type="checkbox" class="form-check-input" id="useHotfixes" name="useHotfixes">
-                <label class="form-check-label" for="useHotfixes">Use hotfixes?</label>
-            </div>-->
+            <input type="checkbox" class="form-check-input" id="useHotfixes" name="useHotfixes">
+            <label class="form-check-label" for="useHotfixes">Use hotfixes?</label>
+        </div>-->
             <input type="submit" id="browseButton" class="form-control form-control-sm btn btn-sm btn-primary" value="Diff">
         </form>
+        <a style='display: none; vertical-align: top;' id='toDBCButton' class='btn btn-secondary btn-sm' href='' target="_parent"><i class='fa fa-table'></i> Open DBC</a>
+        <a style='display: none; vertical-align: top;' id='toCompareButton' class='btn btn-secondary btn-sm' href='' target="_parent"><i class='fa fa-columns'></i> Open to Compare</a>
         <div id='tableContainer'></div>
     </div>
     <link href="/css/select2.min.css" rel="stylesheet" />
@@ -109,13 +111,17 @@
             })();
 
             const urlParams = new URLSearchParams(window.location.search);
-            console.log(window.location.search);
             const isEmbed = urlParams.get('embed');
             if (isEmbed != undefined && isEmbed == "1") {
                 Settings.embed = true;
                 $("nav").hide();
                 $("#fileFilter").hide();
                 $("#dbcform").hide();
+                $("#toCompareButton").show();
+                $("#toDBCButton").show();
+
+                updateComparehref(urlParams.get('dbc'), urlParams.get('old'), urlParams.get('new'));
+                updateToDBChref(urlParams.get('dbc'), urlParams.get('new'));
             }
 
             const currentDBC = urlParams.get('dbc');
@@ -320,6 +326,17 @@
                 });
             }
         });
+
+        function updateComparehref(dbc, build1, build2) {
+            let buttonURL = "/dbc/diff.html?dbc=" + dbc + "&old=" + build1 + "&new=" + build2;
+            let button = document.getElementById("toCompareButton");
+            button.setAttribute("href", buttonURL);
+        }
+        function updateToDBChref(dbc, build2) {
+            let buttonURL = "/dbc/?dbc=" + dbc + "&build=" + build2;
+            let button = document.getElementById("toDBCButton");
+            button.setAttribute("href", buttonURL);
+        }
     </script>
     <script src="/js/dbc.js?v=1636490343"></script>
     <script src="/js/diff_match_patch.js?v=1558192175"></script>
