Fixing an injustice

--- a/wwwroot/dbc/diff.html
+++ b/wwwroot/dbc/diff.html
@@ -90,7 +90,7 @@
             <input type="checkbox" class="form-check-input" id="useHotfixes" name="useHotfixes">
             <label class="form-check-label" for="useHotfixes">Use hotfixes?</label>
         </div>-->
-            <input type="submit" id="browseButton" class="form-control form-control-sm btn btn-sm btn-primary" value="Diff">
+            <input style="margin-bottom: 5px; margin-right: 5px" type="submit" id="browseButton" class="form-control form-control-sm btn btn-sm btn-primary" value="Diff">
         </form>
         <a style='display: none; vertical-align: top;' id='toDBCButton' class='btn btn-secondary btn-sm' href='' target="_parent"><i class='fa fa-table'></i> Open DBC</a>
         <a style='display: none; vertical-align: top;' id='toCompareButton' class='btn btn-secondary btn-sm' href='' target="_parent"><i class='fa fa-columns'></i> Open to Compare</a>
