Add link to DBC info page in table dropdown

--- a/wwwroot/builds/diff.html
+++ b/wwwroot/builds/diff.html
@@ -61,6 +61,7 @@
                     <div class="dropdown-menu" aria-labelledby="navDropdown">
                         <a class="dropdown-item" href="/dbc/">Browse</a>
                         <a class="dropdown-item" href="/dbc/diff.html">Compare</a>
+                        <a class="dropdown-item" href="/dbc/info.html">Info</a>
                     </div>
                 </li>
                 <li class="nav-item">
