--- a/wwwroot/files/index.html
+++ b/wwwroot/files/index.html
@@ -61,6 +61,7 @@
                     <div class="dropdown-menu" aria-labelledby="navDropdown">
                         <a class="dropdown-item" href="/dbc/">Browse</a>
                         <a class="dropdown-item" href="/dbc/diff.html">Compare</a>
+                        <a class="dropdown-item" href="/dbc/info.html">Info</a>
                     </div>
                 </li>
                 <li class="nav-item">
