Add fdid range search parameter

--- a/wwwroot/files/index.html
+++ b/wwwroot/files/index.html
@@ -167,10 +167,10 @@
                     <kbd>unnamed</kbd> for files without filenames<br>
                     <!--<kbd>communitynames</kbd> for files with community filenames<br>-->
                     <kbd>encrypted</kbd> for encrypted files<br>
-                    <kbd>encrypted:KEY</kbd> for encrypted by key<br><!--
-                    <kbd>skit:soundkitid</kbd> for searching by SoundKitID<br>
+                    <kbd>encrypted:KEY</kbd> for encrypted by key<br>
+                    <!--<kbd>skit:soundkitid</kbd> for searching by SoundKitID<br>-->
                     <kbd>range:start-end</kbd> search within a specific set of FileDataIDs<br>
-                    <kbd>vo:searchterm</kbd> show sound files in which this dialogue appears<br>-->
+                    <!--<kbd>vo:searchterm</kbd> show sound files in which this dialogue appears<br>-->
                     <p>It is also possible to combine some of these options (but not others, it will complain) by separating them by a <kbd>,</kbd>. <br>Examples: <kbd>unnamed,type:wmo</kbd> <kbd>creature,type:m2</kbd></p>
                 </div>
                 <div class="modal-footer">
