--- a/wwwroot/dbc/diff.html
+++ b/wwwroot/dbc/diff.html
@@ -97,6 +97,24 @@
         <a style='display: none; vertical-align: top;' id='toCompareButton' class='btn btn-secondary btn-sm' href='' target="_parent"><i class='fa fa-columns'></i> Open to Compare</a>
         <div id='tableContainer'></div>
     </div>
+    <div class="modal" id="fkModal" tabindex="-1" role="dialog" aria-labelledby="fkModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="fkModalLabel">Foreign key lookup</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body" id="fkModalContent">
+                    <i class="fa fa-refresh fa-spin" style="font-size:24px"></i>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <link href="/css/select2.min.css" rel="stylesheet" />
     <script src="/js/select2.min.js"></script>
     <script type='text/javascript'>
@@ -236,6 +254,9 @@
                         alert("An error occured on the server:\n" + resp2[0]['error']);
                     }
                     var fields = [...new Set([].concat(...resp1[0].headers, ...resp2[0].headers))];
+
+                    const fkCols = getFKCols(resp2[0]['headers'], resp2[0]['fks']);
+
                     var tableHeaders = "";
                     $.each(fields, function (i, val) {
                         tableHeaders += "<th>" + val + "</th>";
@@ -276,9 +297,47 @@
                                             // assign the cell value
                                             data = match ? row.row[match[1]][match[2]] : row.row[field];
 
+                                            const headers = resp2[0].headers // using build #2 for all fk references
+
+                                            const columnWithTable = currentDBC + '.' + headers[meta.col];
+                                            let fk = "";
+
+                                            if (meta.col in fkCols) {
+                                                fk = fkCols[meta.col];
+                                            } else if (conditionalFKs.has(columnWithTable)) {
+                                                let conditionalFK = conditionalFKs.get(columnWithTable);
+                                                conditionalFK.forEach(function (conditionalFKEntry) {
+                                                    let condition = conditionalFKEntry[0].split(
+                                                        '=');
+                                                    let conditionTarget = condition[0].split('.');
+                                                    let conditionValue = condition[1];
+                                                    let resultTarget = conditionalFKEntry[1];
+
+                                                    let colTarget = headers.indexOf(
+                                                        conditionTarget[1]);
+
+                                                    // Col target found?
+                                                    if (colTarget > -1) {
+                                                        if (row.row[colTarget] == conditionValue) {
+                                                            fk = resultTarget;
+                                                        }
+                                                    }
+                                                });
+                                            }
+
                                             // only apply on the initial display event for replaced rows that have a diff
-                                            if (type !== 'display' || row.op !== "Replaced" || row.diff === null)
+                                            if (type !== 'display' || row.op !== "Replaced" || row.diff === null) {
+                                                if (fk != "") {
+                                                    data =
+                                                        "<a style='padding-top: 0px; padding-bottom: 0px; cursor: pointer; border-bottom: 1px dotted;' data-tooltip='fk' data-build=" + newBuild + " data-id='" +
+                                                        row.row[field] + "' data-fk='" + fk +
+                                                        "' data-toggle='modal' data-target='#fkModal' onclick='openFKModal(" +
+                                                        row.row[field] + ", \"" + fk + "\", \"" +
+                                                        newBuild + "\")'>" + row.row[field] +
+                                                        "</a>";
+                                                }
                                                 return data;
+                                            }
 
                                             // find and apply the specific diff for this field
                                             // if no diff is found then return the default data value
@@ -289,7 +348,6 @@
 
                                             // apply the diff html information
                                             switch (diff.op) {
-
                                                 case "Added":
                                                     return '<ins class="diff-added">' + diff.currentvalue + '</ins>';
                                                 case "Removed":
@@ -297,9 +355,30 @@
                                                 case "Replaced":
                                                     {
                                                         if (!isNaN(diff.previousvalue) && !isNaN(diff.currentvalue)) {
-                                                            // for numbers return a fake diff to save on computation
-                                                            return '<del class="diff-removed">' + diff.previousvalue + '</del> &rarr; ' +
+                                                            // for numbers, check if they're a fk so we can add tooltips and links
+                                                            // otherwise just show the fake diff
+                                                            if (fk != "") {
+                                                                var newValue =
+                                                                    "<a class='diff-added' style='padding-top: 0px; padding-bottom: 0px; cursor: pointer; border-bottom: 1px dotted;' data-tooltip='fk' data-build=" + newBuild + " data-id='" +
+                                                                    diff.currentvalue + "' data-fk='" + fk +
+                                                                    "' data-toggle='modal' data-target='#fkModal' onclick='openFKModal(" +
+                                                                    diff.currentvalue + ", \"" + fk + "\", \"" +
+                                                                    newBuild + "\")'>" + diff.currentvalue +
+                                                                    "</a>";
+
+                                                                var prevValue =
+                                                                    "<a class='diff-removed' style='padding-top: 0px; padding-bottom: 0px; cursor: pointer; border-bottom: 1px dotted;' data-tooltip='fk' data-build=" + newBuild + " data-id='" +
+                                                                    diff.previousvalue + "' data-fk='" + fk +
+                                                                    "' data-toggle='modal' data-target='#fkModal' onclick='openFKModal(" +
+                                                                    diff.previousvalue + ", \"" + fk + "\", \"" +
+                                                                    newBuild + "\")'>" + diff.previousvalue +
+                                                                    "</a>";
+
+                                                                return prevValue + '&rarr; ' + newValue;
+                                                            } else {
+                                                                return '<del class="diff-removed">' + diff.previousvalue + '</del> &rarr; ' +
                                                                 '<ins class="diff-added">' + diff.currentvalue + '</ins>';
+                                                            }
                                                         } else {
                                                             // for text use diff_match_patch to compute a real diff
                                                             var dmp = new diff_match_patch();
@@ -343,6 +422,8 @@
             button.setAttribute("href", buttonURL);
         }
     </script>
+    <script src="/js/flags.js"></script>
+    <script src="/js/enums.js"></script>
     <script src="/js/dbc.js?v=1636490343"></script>
     <script src="/js/diff_match_patch.js?v=1558192175"></script>
 </body>
