Implement more info/chash modals in files/diffs

--- a/wwwroot/builds/diff.html
+++ b/wwwroot/builds/diff.html
@@ -165,8 +165,7 @@
                 {
                     "targets": 4,
                     "render": function (data, type, full, meta) {
-                        return "";
-                        //return "<a style='padding-top: 0px; padding-bottom: 0px; cursor: pointer' data-toggle='modal' data-target='#moreInfoModal' onClick='fillModal(" + full.id + ")'><i class='fa fa-info-circle'></i></a></td>";
+                        return "<a style='padding-top: 0px; padding-bottom: 0px; cursor: pointer' data-toggle='modal' data-target='#moreInfoModal' onClick='fillModal(" + full.id + ")'><i class='fa fa-info-circle'></i></a></td>";
                     }
                 },
                 {
