--- a/wwwroot/dbc/diff.html
+++ b/wwwroot/dbc/diff.html
@@ -88,9 +88,9 @@
             <select id="newbuild" name="new" class="form-control form-control-sm buildFilter">
             </select>
             <!--<div class="form-check" style="padding-left: 5px;">
-            <input type="checkbox" class="form-check-input" id="useHotfixes" name="useHotfixes">
-            <label class="form-check-label" for="useHotfixes">Use hotfixes?</label>
-        </div>-->
+                <input type="checkbox" class="form-check-input" id="useHotfixes" name="useHotfixes">
+                <label class="form-check-label" for="useHotfixes">Use hotfixes?</label>
+            </div>-->
             <input style="margin-bottom: 5px; margin-right: 5px" type="submit" id="browseButton" class="form-control form-control-sm btn btn-sm btn-primary" value="Diff">
         </form>
         <a style='display: none; vertical-align: top;' id='toDBCButton' class='btn btn-secondary btn-sm' href='' target="_parent"><i class='fa fa-table'></i> Open DBC</a>
@@ -115,6 +115,26 @@
             </div>
         </div>
     </div>
+    <div class="modal" id="moreInfoModal" tabindex="-1" role="dialog" aria-labelledby="moreInfoModalLabel"
+         aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="moreInfoModalLabel">More information</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body" id="moreInfoModalContent">
+                    <i class="fa fa-refresh fa-spin" style="font-size:24px"></i>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script type="text/javascript" src="/js/files.js"></script>
     <link href="/css/select2.min.css" rel="stylesheet" />
     <script src="/js/select2.min.js"></script>
     <script type='text/javascript'>
@@ -328,13 +348,20 @@
                                             // only apply on the initial display event for replaced rows that have a diff
                                             if (type !== 'display' || row.op !== "Replaced" || row.diff === null) {
                                                 if (fk != "") {
-                                                    data =
-                                                        "<a style='padding-top: 0px; padding-bottom: 0px; cursor: pointer; border-bottom: 1px dotted;' data-tooltip='fk' data-build=" + newBuild + " data-id='" +
-                                                        row.row[field] + "' data-fk='" + fk +
-                                                        "' data-toggle='modal' data-target='#fkModal' onclick='openFKModal(" +
-                                                        row.row[field] + ", \"" + fk + "\", \"" +
-                                                        newBuild + "\")'>" + row.row[field] +
-                                                        "</a>";
+                                                    if (fk == "FileData::ID") {
+                                                        data =
+                                                            "<a style='padding-top: 0px; padding-bottom: 0px; cursor: pointer; border-bottom: 1px dotted;' data-toggle='modal' data-target='#moreInfoModal' data-build=" + newBuild + " data-tooltip='file' data-id='" +
+                                                            row.row[field] + "' onclick='fillModal(" + row.row[field] + ")'>" + row.row[field] + "</a>";
+                                                    } else {
+                                                        data =
+                                                            "<a style='padding-top: 0px; padding-bottom: 0px; cursor: pointer; border-bottom: 1px dotted;' data-tooltip='fk' data-build=" + newBuild + " data-id='" +
+                                                            row.row[field] + "' data-fk='" + fk +
+                                                            "' data-toggle='modal' data-target='#fkModal' onclick='openFKModal(" +
+                                                            row.row[field] + ", \"" + fk + "\", \"" +
+                                                            newBuild + "\")'>" + row.row[field] +
+                                                            "</a>";
+                                                    }
+
                                                 }
                                                 return data;
                                             }
@@ -377,7 +404,7 @@
                                                                 return prevValue + '&rarr; ' + newValue;
                                                             } else {
                                                                 return '<del class="diff-removed">' + diff.previousvalue + '</del> &rarr; ' +
-                                                                '<ins class="diff-added">' + diff.currentvalue + '</ins>';
+                                                                    '<ins class="diff-added">' + diff.currentvalue + '</ins>';
                                                             }
                                                         } else {
                                                             // for text use diff_match_patch to compute a real diff
