Fix more info modal on hotfixes page

--- a/wwwroot/dbc/hotfixes.html
+++ b/wwwroot/dbc/hotfixes.html
@@ -497,7 +497,7 @@
         }
 
         function fillModal(fileDataID) {
-            $("#moreInfoModalContent").load("/files/scripts/filedata_api.php?filedataid=" + fileDataID);
+            $("#moreInfoModalContent").load("/casc/moreInfo?filedataid=" + fileDataID);
         }
 
         function fillPreviewModal(buildconfig, filedataid) {
